# foo-fight

./: Cargo.toml  IMPLEMENTATION.md  README.md  SCREENSHOTS.md  fly.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
dictionaries/: git.toml  jujutsu.toml  powershell.toml  powershell_pester.toml
src/: app.rs  dict.rs  dictionary.rs  engine.rs  main.rs  ui.rs
