[package]
name = "foo-fight"
version = "0.1.0"
edition = "2021"
description = "A CLI/TUI speed typing trainer for commands"
authors = ["Phreno"]
license = "MIT"
repository = "https://github.com/Phreno/foo-fight"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
rand = "0.8"

[[bin]]
name = "foo-fight"
path = "src/main.rs"
